--- a/src/Terratype.TestSite/App_Plugins/Terratype.BingMapsV8/Lang/en-us.xml
+++ b/src/Terratype.TestSite/App_Plugins/Terratype.BingMapsV8/Lang/en-us.xml
@@ -5,10 +5,220 @@
   </creator>
 
   <area alais="terratypeBingMapsV8">
-    <key alias="description">Mapping system operated by Microsoft. Requires an API key with entry level costs of 100K tranactions per month for $4,500</key>
+    <key alias="name">Bing Maps V8</key>
+    <key alias="description">Bing Maps (previously Live Search Maps, Windows Live Maps, Windows Live Local, and MSN Virtual Earth) is a web mapping service provided as a part of Microsoft's Bing suite of search engines and powered by the Bing Maps for Enterprise framework</key>
+    <key alias="referenceUrl">https://www.microsoft.com/maps/choose-your-bing-maps-API.aspx</key>
   </area>
   
   <area alias="terratypeBingMapsV8ConfigApperance">
+  </area>
+
+  <area alias="terratypeBingMapsV8ConfigDefinition">
+    <key alias="versionLabel">Version:</key>
+    <key alias="versionDescription">Which branch of Bing Maps V8 would you like to use</key>    
+    <key alias="versionExperimental">Experimental</key>
+    <key alias="versionRelease">Stable (Release with latest features)</key>
+    <key alias="versionFrozen">Frozen (Mission critical release)</key>
+
+    <key alias="apiKeyLabel">Bing API Key:</key>
+    <key alias="apiKeyDescription">Your Bing API Key</key>
+    <key alias="apiKeyPlaceholder">Google API Key</key>
+    <key alias="apiKeyGet">[Get a key]</key>
+    <key alias="apiKeyInvalid">Invalid API Key</key>
+    <key alias="apiKeyValid">API Key is valid</key>
+    <key alias="retryTitle">Try and reload map using this Google Map API Key</key>
+    <key alias="retryLabel">Retry</key>
+
+    <key alias="httpsLabel">Force Https:</key>
+    <key alias="httpsDescription">Force all Google Map requests to use HTTPS protocol, even if the Umbraco instance is running on HTTP. Only relevant when Umbraco is running on HTTP</key>
+
+    <key alias="languageLabel">Language:</key>
+    <key alias="languageDescription">Primary language used to display places</key>
+    <key alias="languageUseDefault">[Use Umbraco]</key>
+    <key alias="languageAB">Abkhaz (аҧсуа бызшәа, аҧсшәа)</key>
+    <key alias="languageAA">Afar (Afaraf)</key>
+    <key alias="languageAF">Afrikaans (Afrikaans)</key>
+    <key alias="languageAK">Akan (Akan)</key>
+    <key alias="languageSQ">Albanian (Shqip)</key>
+    <key alias="languageAM">Amharic (አማርኛ)</key>
+    <key alias="languageAR">Arabic (العربية)</key>
+    <key alias="languageAN">Aragonese (aragonés)</key>
+    <key alias="languageHY">Armenian (Հայերեն)</key>
+    <key alias="languageAS">Assamese (অসমীয়া)</key>
+    <key alias="languageAV">Avaric (авар мацӀ, магӀарул мацӀ)</key>
+    <key alias="languageAE">Avestan (avesta)</key>
+    <key alias="languageAY">Aymara (aymar aru)</key>
+    <key alias="languageAZ">Azerbaijani (azərbaycan dili)</key>
+    <key alias="languageBM">Bambara (bamanankan)</key>
+    <key alias="languageBA">Bashkir (башҡорт теле)</key>
+    <key alias="languageEU">Basque (euskara, euskera)</key>
+    <key alias="languageBE">Belarusian (беларуская мова)</key>
+    <key alias="languageBN">Bengali (বাংলা)</key>
+    <key alias="languageBH">Bihari (भोजपुरी)</key>
+    <key alias="languageBI">Bislama (Bislama)</key>
+    <key alias="languageBS">Bosnian (bosanski jezik)</key>
+    <key alias="languageBR">Breton (brezhoneg)</key>
+    <key alias="languageBG">Bulgarian (български език)</key>
+    <key alias="languageMY">Burmese (ဗမာစာ)</key>
+    <key alias="languageCA">Catalan (català)</key>
+    <key alias="languageCH">Chamorro (Chamoru)</key>
+    <key alias="languageCE">Chechen (нохчийн мотт)</key>
+    <key alias="languageNY">Chichewa (chiCheŵa, chinyanja)</key>
+    <key alias="languageZH">Chinese (中文, 汉语, 漢語)</key>
+    <key alias="languageCV">Chuvash (чӑваш чӗлхи)</key>
+    <key alias="languageKW">Cornish (Kernewek)</key>
+    <key alias="languageCO">Corsican (corsu, lingua corsa)</key>
+    <key alias="languageCR">Cree (ᓀᐦᐃᔭᐍᐏᐣ)</key>
+    <key alias="languageHR">Croatian (hrvatski jezik)</key>
+    <key alias="languageCS">Czech (čeština, český jazyk)</key>
+    <key alias="languageDA">Danish (dansk)</key>
+    <key alias="languageDV">Divehi (ދިވެހި)</key>
+    <key alias="languageNL">Dutch (Nederlands, Vlaams)</key>
+    <key alias="languageDZ">Dzongkha (རྫོང་ཁ)</key>
+    <key alias="languagePA">Eastern Punjabi (ਪੰਜਾਬੀ)</key>
+    <key alias="languageEN">English (English)</key>
+    <key alias="languageEO">Esperanto (Esperanto)</key>
+    <key alias="languageET">Estonian (eesti, eesti keel)</key>
+    <key alias="languageEE">Ewe (Eʋegbe)</key>
+    <key alias="languageFO">Faroese (føroyskt)</key>
+    <key alias="languageFJ">Fijian (vosa Vakaviti)</key>
+    <key alias="languageFI">Finnish (suomi, suomen kieli)</key>
+    <key alias="languageFR">French (français)</key>
+    <key alias="languageFF">Fula (Fulfulde, Pulaar, Pular)</key>
+    <key alias="languageGL">Galician (galego)</key>
+    <key alias="languageLG">Ganda (Luganda)</key>
+    <key alias="languageKA">Georgian (ქართული)</key>
+    <key alias="languageDE">German (Deutsch)</key>
+    <key alias="languageEL">Greek (ελληνικά)</key>
+    <key alias="languageGN">Guaraní (Avañe'ẽ)</key>
+    <key alias="languageGU">Gujarati (ગુજરાતી)</key>
+    <key alias="languageHT">Haitian (Kreyòl ayisyen)</key>
+    <key alias="languageHA">Hausa ((Hausa) هَوُسَ)</key>
+    <key alias="languageHE">Hebrew (עברית)</key>
+    <key alias="languageHZ">Herero (Otjiherero)</key>
+    <key alias="languageHI">Hindi (हिन्दी, हिंदी)</key>
+    <key alias="languageHO">Hiri Motu (Hiri Motu)</key>
+    <key alias="languageHU">Hungarian (magyar)</key>
+    <key alias="languageIS">Icelandic (Íslenska)</key>
+    <key alias="languageIO">Ido (Ido)</key>
+    <key alias="languageIG">Igbo (Asụsụ Igbo)</key>
+    <key alias="languageID">Indonesian (Bahasa Indonesia)</key>
+    <key alias="languageIA">Interlingua (Interlingua)</key>
+    <key alias="languageIE">Interlingue (Interlingue)</key>
+    <key alias="languageIU">Inuktitut (ᐃᓄᒃᑎᑐᑦ)</key>
+    <key alias="languageIK">Inupiaq (Iñupiaq, Iñupiatun)</key>
+    <key alias="languageGA">Irish (Gaeilge)</key>
+    <key alias="languageIT">Italian (Italiano)</key>
+    <key alias="languageJA">Japanese (日本語 (にほんご))</key>
+    <key alias="languageJV">Javanese (ꦧꦱꦗꦮ)</key>
+    <key alias="languageKL">Kalaallisut (kalaallisut, kalaallit oqaasii)</key>
+    <key alias="languageKN">Kannada (ಕನ್ನಡ)</key>
+    <key alias="languageKR">Kanuri (Kanuri)</key>
+    <key alias="languageKS">Kashmiri (कश्मीरी, كشميري‎)</key>
+    <key alias="languageKK">Kazakh (қазақ тілі)</key>
+    <key alias="languageKM">Khmer (ខ្មែរ, ខេមរភាសា, ភាសាខ្មែរ)</key>
+    <key alias="languageKI">Kikuyu (Gĩkũyũ)</key>
+    <key alias="languageRW">Kinyarwanda (Ikinyarwanda)</key>
+    <key alias="languageRN">Kirundi (Ikirundi)</key>
+    <key alias="languageKV">Komi (коми кыв)</key>
+    <key alias="languageKG">Kongo (Kikongo)</key>
+    <key alias="languageKO">Korean (한국어)</key>
+    <key alias="languageKU">Kurdish (Kurdî, كوردی‎)</key>
+    <key alias="languageKJ">Kwanyama (Kuanyama)</key>
+    <key alias="languageKY">Kyrgyz (Кыргызча, Кыргыз тили)</key>
+    <key alias="languageLO">Lao (ພາສາລາວ)</key>
+    <key alias="languageLA">Latin (latine)</key>
+    <key alias="languageLV">Latvian (latviešu valoda)</key>
+    <key alias="languageLI">Limburgish (Limburgs)</key>
+    <key alias="languageLN">Lingala (Lingála)</key>
+    <key alias="languageLT">Lithuanian (lietuvių kalba)</key>
+    <key alias="languageLU">Luba-Katanga (Tshiluba)</key>
+    <key alias="languageLB">Luxembourgish (Lëtzebuergesch)</key>
+    <key alias="languageMK">Macedonian (македонски јазик)</key>
+    <key alias="languageMG">Malagasy (fiteny malagasy)</key>
+    <key alias="languageMS">Malay ( بهاس ملايو‎)</key>
+    <key alias="languageML">Malayalam (മലയാളം)</key>
+    <key alias="languageMT">Maltese (Malti)</key>
+    <key alias="languageGV">Manx (Gaelg, Gailck)</key>
+    <key alias="languageMR">Marathi (Marāṭhī) (मराठी)</key>
+    <key alias="languageMH">Marshallese (Kajin M̧ajeļ)</key>
+    <key alias="languageMN">Mongolian (Монгол хэл)</key>
+    <key alias="languageMI">Māori (te reo Māori)</key>
+    <key alias="languageNA">Nauruan (Dorerin Naoero)</key>
+    <key alias="languageNV">Navajo (Diné bizaad)</key>
+    <key alias="languageNG">Ndonga (Owambo)</key>
+    <key alias="languageNE">Nepali (नेपाली)</key>
+    <key alias="languageND">Northern Ndebele (isiNdebele)</key>
+    <key alias="languageSE">Northern Sami (Davvisámegiella)</key>
+    <key alias="languageNO">Norwegian (Norsk)</key>
+    <key alias="languageNB">Norwegian Bokmål (Norsk bokmål)</key>
+    <key alias="languageNN">Norwegian Nynorsk (Norsk nynorsk)</key>
+    <key alias="languageII">Nuosu (ꆈꌠ꒿)</key>
+    <key alias="languageOC">Occitan (occitan, lenga d'òc)</key>
+    <key alias="languageOJ">Ojibwe (ᐊᓂᔑᓈᐯᒧᐎᓐ)</key>
+    <key alias="languageCU">Old Bulgarian (ѩзыкъ словѣньскъ)</key>
+    <key alias="languageOR">Oriya (ଓଡ଼ିଆ)</key>
+    <key alias="languageOM">Oromo (Afaan Oromoo)</key>
+    <key alias="languageOS">Ossetian (ирон æвзаг)</key>
+    <key alias="languagePS">Pashto (پښتو)</key>
+    <key alias="languageFA">Farsi (فارسی)</key>
+    <key alias="languagePL">Polish (język polski, polszczyzna)</key>
+    <key alias="languagePT">Portuguese (Português)</key>
+    <key alias="languagePI">Pāli (पाऴि)</key>
+    <key alias="languageQU">Quechua (Runa Simi, Kichwa)</key>
+    <key alias="languageRO">Romanian (Română)</key>
+    <key alias="languageRM">Romansh (rumantsch grischun)</key>
+    <key alias="languageRU">Russian (Русский)</key>
+    <key alias="languageSM">Samoan (gagana fa'a Samoa)</key>
+    <key alias="languageSG">Sango (yângâ tî sängö)</key>
+    <key alias="languageSA">Sanskrit (संस्कृतम्)</key>
+    <key alias="languageSC">Sardinian (sardu)</key>
+    <key alias="languageGD">Scottish Gaelic (Gàidhlig)</key>
+    <key alias="languageSR">Serbian (српски језик)</key>
+    <key alias="languageSN">Shona (chiShona)</key>
+    <key alias="languageSD">Sindhi (सिन्धी, سنڌي، سندھی‎)</key>
+    <key alias="languageSI">Sinhalese (සිංහල)</key>
+    <key alias="languageSK">Slovak (slovenčina, slovenský jazyk)</key>
+    <key alias="languageSL">Slovene (slovenski jezik, slovenščina)</key>
+    <key alias="languageSO">Somali (Soomaaliga, af Soomaali)</key>
+    <key alias="languageNR">Southern Ndebele (isiNdebele)</key>
+    <key alias="languageST">Southern Sotho (Sesotho)</key>
+    <key alias="languageES">Spanish (Español)</key>
+    <key alias="languageSU">Sundanese (Basa Sunda)</key>
+    <key alias="languageSW">Swahili (Kiswahili)</key>
+    <key alias="languageSS">Swati (SiSwati)</key>
+    <key alias="languageSV">Swedish (svenska)</key>
+    <key alias="languageTL">Tagalog (Wikang Tagalog)</key>
+    <key alias="languageTY">Tahitian (Reo Tahiti)</key>
+    <key alias="languageTG">Tajik (тоҷикӣ, toçikī, تاجیکی‎)</key>
+    <key alias="languageTA">Tamil (தமிழ்)</key>
+    <key alias="languageTT">Tatar (татар теле, tatar tele)</key>
+    <key alias="languageTE">Telugu (తెలుగు)</key>
+    <key alias="languageTH">Thai (ไทย)</key>
+    <key alias="languageBO">Tibetan (བོད་ཡིག)</key>
+    <key alias="languageTI">Tigrinya (ትግርኛ)</key>
+    <key alias="languageTO">Tonga (faka Tonga)</key>
+    <key alias="languageTS">Tsonga (Xitsonga)</key>
+    <key alias="languageTN">Tswana (Setswana)</key>
+    <key alias="languageTR">Turkish (Türkçe)</key>
+    <key alias="languageTK">Turkmen (Türkmen, Түркмен)</key>
+    <key alias="languageTW">Twi (Twi)</key>
+    <key alias="languageUK">Ukrainian (Українська)</key>
+    <key alias="languageUR">Urdu (اردو)</key>
+    <key alias="languageUG">Uyghur (ئۇيغۇرچە‎, Uyghurche)</key>
+    <key alias="languageUZ">Uzbek (Oʻzbek, Ўзбек, أۇزبېك‎)</key>
+    <key alias="languageVE">Venda (Tshivenḓa)</key>
+    <key alias="languageVI">Vietnamese (Tiếng Việt)</key>
+    <key alias="languageVO">Volapük (Volapük)</key>
+    <key alias="languageWA">Walloon (walon)</key>
+    <key alias="languageCY">Welsh (Cymraeg)</key>
+    <key alias="languageFY">Western Frisian (Frysk)</key>
+    <key alias="languageWO">Wolof (Wollof)</key>
+    <key alias="languageXH">Xhosa (isiXhosa)</key>
+    <key alias="languageYI">Yiddish (ייִדיש)</key>
+    <key alias="languageYO">Yoruba (Yorùbá)</key>
+    <key alias="languageZA">Zhuang (Saɯ cueŋƅ, Saw cuengh)</key>
+    <key alias="languageZU">Zulu (isiZulu)</key>
   </area>
 
 </language>
