--- a/src/Terratype.BingMapsV8/App_Plugins/Terratype.BingMapsV8/Lang/en-us.xml
+++ b/src/Terratype.BingMapsV8/App_Plugins/Terratype.BingMapsV8/Lang/en-us.xml
@@ -221,4 +221,297 @@
     <key alias="languageZU">Zulu (isiZulu)</key>
   </area>
 
+  <area alias="terratypeBingMapsV8ConfigApperance">
+
+    <key alias="basicMapLabel">Basic Map:</key>
+    <key alias="basicMapDescription">Do you want to see the standard map</key>
+
+    <key alias="satelliteMapLabel">Satellite Map:</key>
+    <key alias="satelliteMapDescription">Do you want to see the satellite map</key>
+
+    <key alias="ordnanceSurveyMapLabel">Ordnance Survey Map:</key>
+    <key alias="ordnanceSurveyMapDescription">Do you want to see the Ordnance Survey map</key>
+
+    <key alias="breadcrumbLabel">Breadcrumb:</key>
+    <key alias="breadcrumbDescription">Display the current center location’s geography hierarchy over the top of the map. For example, if the location center is Seattle, the breadcrumb control displays 'World . United States . WA'</key>
+
+    <key alias="dashboardLabel">Navigation Control:</key>
+    <key alias="dashboardDescription">The current center location’s geography hierarchy. For example, if the location center is Seattle, the breadcrumb control displays “World . United States . WA”</key>
+
+    <key alias="scaleLabel">Scale:</key>
+    <key alias="scaleDescription">Allow the map to show the current scale being used</key>
+
+    <key alias="labelsLabel">Labels:</key>
+    <key alias="labelsDescription">Do you want labels (names of countries, regions, areas, etc) to appear on the map</key>
+
+    <key alias="positionLabel">Default location:</key>
+    <key alias="positionDescription">Select the default location when displaying this map to a content editor</key>
+  </area>
+
+  <area alias="terratypeGoogleMapsV3ConfigSearch">
+    <key alias="typeLabel">Search:</key>
+    <key alias="typeDescription">Do you want to include a text box, to lookup locations</key>
+    <key alias="typeDisable">Hide Search</key>
+    <key alias="typeEnable">Enable Search</key>
+    <key alias="typeAutocomplete">Enable Search with Autocomplete</key>
+
+    <key alias="countryLabel">Limit:</key>
+    <key alias="countryDescription">Limited all search results to a particular country or countries</key>
+    <key alias="countryAF">Afghanistan</key>
+    <key alias="countryAX">Aland Islands</key>
+    <key alias="countryAL">Albania</key>
+    <key alias="countryDZ">Algeria</key>
+    <key alias="countryAS">American Samoa</key>
+    <key alias="countryAD">Andorra</key>
+    <key alias="countryAO">Angola</key>
+    <key alias="countryAI">Anguilla</key>
+    <key alias="countryAQ">Antarctica</key>
+    <key alias="countryAG">Antigua and Barbuda</key>
+    <key alias="countryAR">Argentina</key>
+    <key alias="countryAM">Armenia</key>
+    <key alias="countryAW">Aruba</key>
+    <key alias="countryAU">Australia</key>
+    <key alias="countryAT">Austria</key>
+    <key alias="countryAZ">Azerbaijan</key>
+    <key alias="countryBS">Bahamas</key>
+    <key alias="countryBH">Bahrain</key>
+    <key alias="countryBD">Bangladesh</key>
+    <key alias="countryBB">Barbados</key>
+    <key alias="countryBY">Belarus</key>
+    <key alias="countryBE">Belgium</key>
+    <key alias="countryBZ">Belize</key>
+    <key alias="countryBJ">Benin</key>
+    <key alias="countryBM">Bermuda</key>
+    <key alias="countryBT">Bhutan</key>
+    <key alias="countryBO">Bolivia</key>
+    <key alias="countryBA">Bosnia and Herzegovina</key>
+    <key alias="countryBW">Botswana</key>
+    <key alias="countryBV">Bouvet Island</key>
+    <key alias="countryBR">Brazil</key>
+    <key alias="countryIO">British Indian Ocean Territory</key>
+    <key alias="countryVG">British Virgin Islands</key>
+    <key alias="countryBN">Brunei Darussalam</key>
+    <key alias="countryBG">Bulgaria</key>
+    <key alias="countryBF">Burkina Faso</key>
+    <key alias="countryBI">Burundi</key>
+    <key alias="countryKH">Cambodia</key>
+    <key alias="countryCM">Cameroon</key>
+    <key alias="countryCA">Canada</key>
+    <key alias="countryCV">Cape Verde</key>
+    <key alias="countryKY">Cayman Islands</key>
+    <key alias="countryCF">Central African Republic</key>
+    <key alias="countryTD">Chad</key>
+    <key alias="countryCL">Chile</key>
+    <key alias="countryCN">China</key>
+    <key alias="countryCX">Christmas Island</key>
+    <key alias="countryCC">Cocos Islands</key>
+    <key alias="countryCO">Colombia</key>
+    <key alias="countryKM">Comoros</key>
+    <key alias="countryCD">Congo</key>
+    <key alias="countryCG">Congo (Brazzaville)</key>
+    <key alias="countryCK">Cook Islands</key>
+    <key alias="countryCR">Costa Rica</key>
+    <key alias="countryCI">Côte d'Ivoire</key>
+    <key alias="countryHR">Croatia</key>
+    <key alias="countryCU">Cuba</key>
+    <key alias="countryCY">Cyprus</key>
+    <key alias="countryCZ">Czech Republic</key>
+    <key alias="countryDK">Denmark</key>
+    <key alias="countryDJ">Djibouti</key>
+    <key alias="countryDM">Dominica</key>
+    <key alias="countryDO">Dominican Republic</key>
+    <key alias="countryEC">Ecuador</key>
+    <key alias="countryEG">Egypt</key>
+    <key alias="countrySV">El Salvador</key>
+    <key alias="countryGQ">Equatorial Guinea</key>
+    <key alias="countryER">Eritrea</key>
+    <key alias="countryEE">Estonia</key>
+    <key alias="countryET">Ethiopia</key>
+    <key alias="countryFK">Falkland Islands</key>
+    <key alias="countryFO">Faroe Islands</key>
+    <key alias="countryFJ">Fiji</key>
+    <key alias="countryFI">Finland</key>
+    <key alias="countryFR">France</key>
+    <key alias="countryGF">French Guiana</key>
+    <key alias="countryPF">French Polynesia</key>
+    <key alias="countryTF">French Southern Territories</key>
+    <key alias="countryGA">Gabon</key>
+    <key alias="countryGM">Gambia</key>
+    <key alias="countryGE">Georgia</key>
+    <key alias="countryDE">Germany</key>
+    <key alias="countryGH">Ghana</key>
+    <key alias="countryGI">Gibraltar</key>
+    <key alias="countryGR">Greece</key>
+    <key alias="countryGL">Greenland</key>
+    <key alias="countryGD">Grenada</key>
+    <key alias="countryGP">Guadeloupe</key>
+    <key alias="countryGU">Guam</key>
+    <key alias="countryGT">Guatemala</key>
+    <key alias="countryGG">Guernsey</key>
+    <key alias="countryGN">Guinea</key>
+    <key alias="countryGW">Guinea-Bissau</key>
+    <key alias="countryGY">Guyana</key>
+    <key alias="countryHT">Haiti</key>
+    <key alias="countryHM">Heard Island and Mcdonald Islands</key>
+    <key alias="countryVA">Holy See (Vatican City State)</key>
+    <key alias="countryHN">Honduras</key>
+    <key alias="countryHK">Hong Kong</key>
+    <key alias="countryHU">Hungary</key>
+    <key alias="countryIS">Iceland</key>
+    <key alias="countryIN">India</key>
+    <key alias="countryID">Indonesia</key>
+    <key alias="countryIR">Iran</key>
+    <key alias="countryIQ">Iraq</key>
+    <key alias="countryIE">Ireland</key>
+    <key alias="countryIM">Isle of Man</key>
+    <key alias="countryIL">Israel</key>
+    <key alias="countryIT">Italy</key>
+    <key alias="countryJM">Jamaica</key>
+    <key alias="countryJP">Japan</key>
+    <key alias="countryJE">Jersey</key>
+    <key alias="countryJO">Jordan</key>
+    <key alias="countryKZ">Kazakhstan</key>
+    <key alias="countryKE">Kenya</key>
+    <key alias="countryKI">Kiribati</key>
+    <key alias="countryKW">Kuwait</key>
+    <key alias="countryKG">Kyrgyzstan</key>
+    <key alias="countryLA">Lao PDR</key>
+    <key alias="countryLV">Latvia</key>
+    <key alias="countryLB">Lebanon</key>
+    <key alias="countryLS">Lesotho</key>
+    <key alias="countryLR">Liberia</key>
+    <key alias="countryLY">Libya</key>
+    <key alias="countryLI">Liechtenstein</key>
+    <key alias="countryLT">Lithuania</key>
+    <key alias="countryLU">Luxembourg</key>
+    <key alias="countryMO">Macao</key>
+    <key alias="countryMK">Macedonia</key>
+    <key alias="countryMG">Madagascar</key>
+    <key alias="countryMW">Malawi</key>
+    <key alias="countryMY">Malaysia</key>
+    <key alias="countryMV">Maldives</key>
+    <key alias="countryML">Mali</key>
+    <key alias="countryMT">Malta</key>
+    <key alias="countryMH">Marshall Islands</key>
+    <key alias="countryMQ">Martinique</key>
+    <key alias="countryMR">Mauritania</key>
+    <key alias="countryMU">Mauritius</key>
+    <key alias="countryYT">Mayotte</key>
+    <key alias="countryMX">Mexico</key>
+    <key alias="countryFM">Micronesia</key>
+    <key alias="countryMD">Moldova</key>
+    <key alias="countryMC">Monaco</key>
+    <key alias="countryMN">Mongolia</key>
+    <key alias="countryME">Montenegro</key>
+    <key alias="countryMS">Montserrat</key>
+    <key alias="countryMA">Morocco</key>
+    <key alias="countryMZ">Mozambique</key>
+    <key alias="countryMM">Myanmar</key>
+    <key alias="countryNA">Namibia</key>
+    <key alias="countryNR">Nauru</key>
+    <key alias="countryNP">Nepal</key>
+    <key alias="countryNL">Netherlands</key>
+    <key alias="countryAN">Netherlands Antilles</key>
+    <key alias="countryNC">New Caledonia</key>
+    <key alias="countryNZ">New Zealand</key>
+    <key alias="countryNI">Nicaragua</key>
+    <key alias="countryNE">Niger</key>
+    <key alias="countryNG">Nigeria</key>
+    <key alias="countryNU">Niue</key>
+    <key alias="countryNF">Norfolk Island</key>
+    <key alias="countryKP">North Korea</key>
+    <key alias="countryMP">Northern Mariana Islands</key>
+    <key alias="countryNO">Norway</key>
+    <key alias="countryOM">Oman</key>
+    <key alias="countryPK">Pakistan</key>
+    <key alias="countryPW">Palau</key>
+    <key alias="countryPS">Palestinian Territory</key>
+    <key alias="countryPA">Panama</key>
+    <key alias="countryPG">Papua New Guinea</key>
+    <key alias="countryPY">Paraguay</key>
+    <key alias="countryPE">Peru</key>
+    <key alias="countryPH">Philippines</key>
+    <key alias="countryPN">Pitcairn</key>
+    <key alias="countryPL">Poland</key>
+    <key alias="countryPT">Portugal</key>
+    <key alias="countryPR">Puerto Rico</key>
+    <key alias="countryQA">Qatar</key>
+    <key alias="countryRE">Réunion</key>
+    <key alias="countryRO">Romania</key>
+    <key alias="countryRU">Russian Federation</key>
+    <key alias="countryRW">Rwanda</key>
+    <key alias="countrySH">Saint Helena</key>
+    <key alias="countryKN">Saint Kitts and Nevis</key>
+    <key alias="countryLC">Saint Lucia</key>
+    <key alias="countryPM">Saint Pierre and Miquelon</key>
+    <key alias="countryVC">Saint Vincent and Grenadines</key>
+    <key alias="countryBL">Saint-Barthélemy</key>
+    <key alias="countryMF">Saint-Martin (French part)</key>
+    <key alias="countryWS">Samoa</key>
+    <key alias="countrySM">San Marino</key>
+    <key alias="countryST">Sao Tome and Principe</key>
+    <key alias="countrySA">Saudi Arabia</key>
+    <key alias="countrySN">Senegal</key>
+    <key alias="countryRS">Serbia</key>
+    <key alias="countrySC">Seychelles</key>
+    <key alias="countrySL">Sierra Leone</key>
+    <key alias="countrySG">Singapore</key>
+    <key alias="countrySK">Slovakia</key>
+    <key alias="countrySI">Slovenia</key>
+    <key alias="countrySB">Solomon Islands</key>
+    <key alias="countrySO">Somalia</key>
+    <key alias="countryZA">South Africa</key>
+    <key alias="countryGS">South Georgia and the South Sandwich Islands</key>
+    <key alias="countryKR">South Korea</key>
+    <key alias="countrySS">South Sudan</key>
+    <key alias="countryES">Spain</key>
+    <key alias="countryLK">Sri Lanka</key>
+    <key alias="countrySD">Sudan</key>
+    <key alias="countrySR">Suriname *</key>
+    <key alias="countrySJ">Svalbard and Jan Mayen</key>
+    <key alias="countrySZ">Swaziland</key>
+    <key alias="countrySE">Sweden</key>
+    <key alias="countryCH">Switzerland</key>
+    <key alias="countrySY">Syria</key>
+    <key alias="countryTW">Taiwan</key>
+    <key alias="countryTJ">Tajikistan</key>
+    <key alias="countryTZ">Tanzania</key>
+    <key alias="countryTH">Thailand</key>
+    <key alias="countryTL">Timor-Leste</key>
+    <key alias="countryTG">Togo</key>
+    <key alias="countryTK">Tokelau</key>
+    <key alias="countryTO">Tonga</key>
+    <key alias="countryTT">Trinidad and Tobago</key>
+    <key alias="countryTN">Tunisia</key>
+    <key alias="countryTR">Turkey</key>
+    <key alias="countryTM">Turkmenistan</key>
+    <key alias="countryTC">Turks and Caicos</key>
+    <key alias="countryTV">Tuvalu</key>
+    <key alias="countryUG">Uganda</key>
+    <key alias="countryUA">Ukraine</key>
+    <key alias="countryAE">United Arab Emirates</key>
+    <key alias="countryGB">United Kingdom</key>
+    <key alias="countryUM">United States Minor Outlying Islands</key>
+    <key alias="countryUS">United States of America</key>
+    <key alias="countryUY">Uruguay</key>
+    <key alias="countryUZ">Uzbekistan</key>
+    <key alias="countryVU">Vanuatu</key>
+    <key alias="countryVE">Venezuela</key>
+    <key alias="countryVN">Viet Nam</key>
+    <key alias="countryVI">Virgin Islands, US</key>
+    <key alias="countryWF">Wallis and Futuna Islands</key>
+    <key alias="countryEH">Western Sahara</key>
+    <key alias="countryYE">Yemen</key>
+    <key alias="countryZM">Zambia</key>
+    <key alias="countryZW">Zimbabwe</key>
+  </area>
+
+  <area alias="terratypeGoogleMapsV3EditorApperance">
+    <key alias="statusInvalid">Invalid Bing Map API Key</key>
+    <key alias="statusError">Failed to load Bing Maps V8 multiple times, please manually refresh the page and try again</key>
+    <key alias="statusDuplicate">Detected multiple BingMapsV8 maps with different configuration; All Bing Maps must share the same Api Key, Coordinate System, ForceHttps switch and Language settings</key>
+    <key alias="searchPlaceholder">Search...</key>
+    <key alias="locationPlaceholder">latitude (-90.0 to 90.0), longitude (-180.0 to 180.0)</key>
+  </area>
+
 </language>
