Speedup, 1.0.17, revamped Frisk

--- a/src/Terratype.BingMapsV8/App_Plugins/Terratype.BingMapsV8/Lang/en-us.xml
+++ b/src/Terratype.BingMapsV8/App_Plugins/Terratype.BingMapsV8/Lang/en-us.xml
@@ -269,7 +269,7 @@
     <key alias="typeAutocomplete">Enable Search with Autocomplete</key>
 
     <key alias="countryLabel">Limit:</key>
-    <key alias="countryDescription">Limited all search results to a particular country or countries</key>
+    <key alias="countryDescription">Limit all search results to a particular country or countries</key>
     <key alias="countryAF">Afghanistan</key>
     <key alias="countryAX">Aland Islands</key>
     <key alias="countryAL">Albania</key>
