--- a/src/Terratype.GoogleMapsV3/App_Plugins/Terratype.GoogleMapsV3/Lang/en-us.xml
+++ b/src/Terratype.GoogleMapsV3/App_Plugins/Terratype.GoogleMapsV3/Lang/en-us.xml
@@ -357,7 +357,7 @@
     <key alias="typeError"><![CDATA[Need to enable <a href="https://console.developers.google.com/apis" target="_blank">Google Places API Web Service</a> for your Google API Key]]></key>
 
     <key alias="countryLabel">Limit:</key>
-    <key alias="countryDescription">Limited all search results to a particular country or countries</key>
+    <key alias="countryDescription">Limit all search results to a particular country or countries</key>
     <key alias="countryMax"><![CDATA[NOTE: Google Maps V{{view().provider.version}} has a limited of only allowing search restrictions to one country. From version 3.27 onwards, this restriction has been increased to five]]></key>
     <key alias="countryAF">Afghanistan</key>
     <key alias="countryAX">Aland Islands</key>
